fdo#46805 - special-case appending items to autocorrect lists